vpc.yaml
Description: 'CloudFormation Template for research-k8s VPC. Based on default VPC template here: https://docs.aws.amazon.com/codebuild/latest/userguide/cloudformation-vpc-template.html'

Parameters: 
  EnvironmentName:
    Description: An environment name that will be prefixed to resource name 
    Type: String 
  VpcBlock:
    Type: String
    Default: 10.10.0.0/16
    Description: The CIDR Range for the VPC. 
  VPCSubnetA:
    Type: String
    Default: 10.10.1.0/24
    Description: Default CidrBlock for Subnet 01. 
  VPCSubnetB:
    Type: String
    Default: 10.10.2.0/24
    Description: Default CidrBlock for Subnet 02. 
  VPCSubnetC:
    Type: String
    Default: 10.10.3.0/24
    Description: Default CidrBlock for Subnet 03. 
  PublicSource:
    Type: String
    Default: 0.0.0.0/0
    Description: Public traffic source. 
  BillFundTag:
    Description: Tag for back end reporting
    Type: String 
    Default: Research

Metadata: 
  AWS::CloudFormation::Interface: 
    ParameterGroups: 
      - 
        Label: 
          default: "General Information"
        Parameters: 
          - EnvironmentName
          - BillFundTag
      - 
        Label: 
          default: "Network Configuration"
        Parameters: 
          - VpcBlock
          - VPCSubnetA
          - VPCSubnetB
          - VPCSubnetC
          - PublicSource

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref 'VpcBlock'
      EnableDnsSupport: true
      EnableDnsHostnames: true 
      Tags:
       - Key: Name 
         Value: !Sub ${EnvironmentName}-private-vpc
       - Key: BillFund
         Value: !Ref BillFundTag 

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties: 
      Tags:
      - Key: Name
        Value: !Ref 'EnvironmentName' 
      - Key: BillFund
        Value: !Ref BillFundTag 

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    DependsOn: VPC
    Properties:
      InternetGatewayId: !Ref 'InternetGateway'
      VpcId: !Ref 'VPC'

  PublicSubnetA:
    Type:  AWS::EC2::Subnet
    Metadata:
      Comment: Private Subnet in AZ a
    Properties:
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref 'VPCSubnetA'
      VpcId: !Ref VPC
      Tags:
       - Key: Name
         Value: !Sub ${AWS::StackName}-PublicSubnetA
       - Key: BillFund
         Value: !Ref BillFundTag 

  PublicSubnetB:
    Type:  AWS::EC2::Subnet
    Metadata:
      Comment: Private Subnet in AZ b
    Properties:
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Ref 'VPCSubnetB'
      VpcId: !Ref VPC
      Tags:
       - Key: Name
         Value: !Sub ${AWS::StackName}-PublicSubnetB
       - Key: BillFund
         Value: !Ref BillFundTag 

  PublicSubnetC:
    Type:  AWS::EC2::Subnet
    Metadata:
      Comment: Private Subnet in AZ c
    Properties:
      AvailabilityZone: !Select [ 2, !GetAZs '' ]
      CidrBlock: !Ref 'VPCSubnetC'
      VpcId: !Ref VPC
      Tags:
       - Key: Name
         Value: !Sub ${AWS::StackName}-PublicSubnetC
       - Key: BillFund
         Value: !Ref BillFundTag 

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
       - Key: Name
         Value: Public Outbound
       - Key: Network
         Value: Public 

  Route: 
    DependsOn: InternetGatewayAttachment
    Type: AWS::EC2::Route
    Properties: 
      RouteTableId: !Ref 'RouteTable'
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref 'InternetGateway'


  PublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PublicSubnetA'
      RouteTableId: !Ref 'RouteTable'

  PublicSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PublicSubnetB'
      RouteTableId: !Ref 'RouteTable'

  PublicSubnetCRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PublicSubnetC'
      RouteTableId: !Ref 'RouteTable'

  SshSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Enable SSH to servers in VPC
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref 'PublicSource'
      Tags: 
       - Key: Name
         Value: !Sub ${EnvironmentName}-SSH 

  IcmpSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Enable icmp on local subnet
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
        - IpProtocol: icmp
          FromPort: '8'
          ToPort: '-1'
          CidrIp: !Ref 'PublicSource'
      Tags: 
       - Key: Name
         Value: !Sub ${EnvironmentName}-ICMP
  
  WebServerHTTPSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP on web server
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: !Ref 'PublicSource'
      Tags:
       - Key: Name
         Value: !Sub ${EnvironmentName}-HTTP

  WebServerHTTPSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTPS on web server
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: !Ref 'PublicSource'
      Tags:
       - Key: Name
         Value: !Sub ${EnvironmentName}-HTTPS

  EFSShareSecurityGroup:
    Type: AWS::EC2::SecurityGroup    
    Properties:
      GroupDescription: Enable EFS Access in subnet
      VpcId: !Ref 'VPC'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '2049'
          ToPort: '2049'
          CidrIp: !Ref 'VpcBlock'
      Tags:
       - Key: Name
         Value: !Sub ${EnvironmentName}-NFS 

Outputs:

  VPCId:
    Description: VPC-Id
    Value: !Ref VPC
  SubnetAId:
    Description: SubnetA-Id
    Value: !Ref PublicSubnetA
  SubnetBId:
    Description: SubnetB-Id
    Value: !Ref PublicSubnetB
  SubnetCId:
    Description: SubnetC-Id
    Value: !Ref PublicSubnetC
